# legal-document-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_commands.txt  test  type check
.cursor/rules/: python-ai-best-practices.mdc
.github/workflows/: ci.yml
docs/: production_readiness_pillars_4f389bcd.plan.md  rag_evaluations_ci_cd.md
presentation/: index.html
prompts/: compare_system.md  qa_system.md  risk_system.md
scripts/: export_cuad_pdfs.py  run_eval.py
src/legal_ai/: __init__.py
src/legal_ai/api/: dependencies.py  main.py  rate_limit.py  schemas.py
src/legal_ai/config/: __init__.py  logging.py  settings.py
src/legal_ai/evals/: __init__.py  answer_metrics.py  citation_metrics.py  datasets.py  report.py  retrieval_metrics.py  runner.py
src/legal_ai/fine_tuning/: merge_model.py  prepare_cuad.py  taxonomy.py  train_qlora.py
src/legal_ai/inference/: comparator.py  llm_client.py  qa_chain.py  risk_detector.py
src/legal_ai/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py
src/legal_ai/observability/: __init__.py  context.py  metrics.py  middleware.py  telemetry.py
src/legal_ai/resilience/: __init__.py  circuit_breaker.py  resilient_llm.py
src/legal_ai/retrieval/: hybrid_retriever.py  vector_store.py
src/legal_ai/ui/: api_client.py  app.py
src/legal_ai/utils/: text.py
src/legal_ai/workers/: __init__.py  ingest_worker.py  queue.py
