[project]
name = "legal-ai-assistant"
version = "0.1.0"
description = "RAG + fine-tuning legal contract assistant (Q&A, risk detection, comparator)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Legal AI Team" }]
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "python-dotenv>=1.0,<2",
    "tenacity>=9.0,<10",
    "loguru>=0.7,<0.8",
    "httpx>=0.27,<0.29",
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "python-multipart>=0.0.9,<0.1",
    "streamlit>=1.40,<2",
    "qdrant-client>=1.12,<2",
    "rank-bm25>=0.2.2,<0.3",
    "llama-index>=0.12,<0.15",
    "llama-index-llms-ollama>=0.5,<0.7",
    "llama-index-embeddings-huggingface>=0.4,<0.6",
    "llama-index-vector-stores-qdrant>=0.4,<0.7",
    "sentence-transformers>=3.0,<4",
    "pymupdf>=1.24,<2",
    "pdfplumber>=0.11,<0.13",
    "rapidfuzz>=3.9,<4",
    "numpy>=1.26,<3",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-exporter-prometheus>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "prometheus-client>=0.20,<1",
    "slowapi>=0.1.9,<0.2",
    "arq>=0.26,<0.27",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
finetune = [
    "torch>=2.3,<3",
    "transformers>=4.45,<5",
    "datasets>=3.0,<4",
    "peft>=0.13,<0.18",
    "trl>=0.11,<0.20",
    "accelerate>=1.0,<2",
    "evaluate>=0.4,<0.5",
]
finetune-nvidia = [
    "bitsandbytes>=0.44,<0.50",
]
dev = [
    "ruff>=0.7,<0.10",
    "black>=24.8,<26",
    "mypy>=1.11,<2",
    "pre-commit>=4.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
